--- a/.github/workflows/Modpielibv4.yml
+++ b/.github/workflows/Modpielibv4.yml
@@ -208,7 +208,7 @@ jobs:
         export CGO_CFLAGS="-O2 -g"
         export CGO_CXXFLAGS="-O2 -g"
         #export CGO_LDFLAGS="-O3 -flto=thin -fuse-ld=lld -Wl,-O3 -Wl,--lto-O3 -Wl,--gc-sections -Wl,--icf=all -Wl,--strip-all -WL, -z,max-page-size=16384"
-        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments"
+        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000"
         #export GOFLAGS="-a"
 
         gomobile bind -v -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid=''" ./
