--- a/.github/workflows/Visibility.yml
+++ b/.github/workflows/Visibility.yml
@@ -1,19 +1,15 @@
-name: Change Visibility
+name: Public Test
+description: A test that the action makes the repo public
+
 on:
   workflow_dispatch:
-   inputs:
-     token:
-      description: "A GitHub personal access token with read and write access to the repository's administration"
-      required: true
-     visibility:
-       description: "Either 'public' or 'private' depending on if you want to make the repository public or private respectively."
-       required: true
 
- 
 jobs:
-  build:
+  run-my-action:
     runs-on: ubuntu-slim
     steps:
-
-    - name: GitHub Visibility Action
-      uses: JustinBird/github-visibility-action@v0.0.2
+      - name: Make the repo public
+        uses: justinbird/github-visibility-action@main
+        with:
+          token: '${{ secrets.ADMINISTRATION_TOKEN }}'
+          visibility: 'public'
