--- a/.github/workflows/Private.yml
+++ b/.github/workflows/Private.yml
@@ -6,12 +6,12 @@ on:
 
 jobs:
   run-my-action:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v3
 
       - name: Make the repo private
         uses: justinbird/github-visibility-action@main
         with:
-          token: '${{ secrets.ADMINISTRATION_TOKEN }}'
+          token: '${{ secrets.PRIVACY_TOKEN }}'
           visibility: 'private'
