--- a/.github/workflows/Private.yml
+++ b/.github/workflows/Private.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-slim
     steps:
       - name: Change Visibility
-        uses: JustinBird/github-visibility-action@v1
+        uses: JustinBird/github-visibility-action@main
         with:
           visibility: private
           token: ${{ secrets.ADMINISTRATION_TOKEN }}
