--- a/.github/workflows/modlibpiev5.yml
+++ b/.github/workflows/modlibpiev5.yml
@@ -19,9 +19,7 @@ on:
       merge_dns:
         description: 'merge DNS commit (0 = none)'
         required: false
-        default: '0'
-env:
-  ANDROID_NDK_VERSION: r26d  # Updated to support 16KB page alignment
+        default: '0'  # Updated to support 16KB page alignment
         
  
 jobs:
@@ -208,7 +206,7 @@ jobs:
         export CGO_CFLAGS="-O2 -g"
         export CGO_CXXFLAGS="-O2 -g"
         #export CGO_LDFLAGS="-O3 -flto=thin -fuse-ld=lld -Wl,-O3 -Wl,--lto-O3 -Wl,--gc-sections -Wl,--icf=all -Wl,--strip-all -WL, -z,max-page-size=16384"
-        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -static-libgcc"
+        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -WL,-z,now -static-libgcc"
         #export GOFLAGS="-a"
 
         gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid=''" ./
