--- a/.github/workflows/modlibpiev5.yml
+++ b/.github/workflows/modlibpiev5.yml
@@ -203,10 +203,10 @@ jobs:
         export ANDROID_NDK_HOME=$ANDROID_NDK_ROOT
 
 
-        export CGO_CFLAGS="-O2 -g"
-        export CGO_CXXFLAGS="-O2 -g"
+        export CGO_CFLAGS="-O2 -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector -fmerge-all-constants"
+        export CGO_CXXFLAGS="-O2 -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector -fmerge-all-constants"
         #export CGO_LDFLAGS="-O3 -flto=thin -fuse-ld=lld -Wl,-O3 -Wl,--lto-O3 -Wl,--gc-sections -Wl,--icf=all -Wl,--strip-all -WL, -z,max-page-size=16384"
-        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -WL,-z,now -static-libgcc"
+        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -WL,-z,now -static-libgcc -Wl,--strip-all -Wl,--gc-sections"
         #export GOFLAGS="-a"
 
         gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid=''" ./
