--- a/.github/workflows/modlibpiev5.yml
+++ b/.github/workflows/modlibpiev5.yml
@@ -209,7 +209,7 @@ jobs:
         export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -WL,-z,now -static-libgcc -Wl,--strip-all -Wl,--gc-sections"
         #export GOFLAGS="-a"
 
-        gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid='' -linkmode external -extldflags='$CGO_LDFLAGS'" ./
+        gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid='' -linkmode external -extldflags=$CGO_LDFLAGS" ./
   
 
     - name: Strip native libraries in AAR
