--- a/.github/workflows/modlibpiev5.yml
+++ b/.github/workflows/modlibpiev5.yml
@@ -208,7 +208,7 @@ jobs:
         # export CGO_LDFLAGS="-fuse-ld=lld -Wl,-z,separate-loadable-segments -Wl,-z,common-page-size=0x4000 -Wl,-z,max-page-size=0x4000 -Wl,--strip-all -Wl,--gc-sections"
         #  export CGO_LDFLAGS="-z,max-page-size=0x4000 -z,common-page-size=0x4000 -z,separate-loadable-segments -z,now -static-libgcc --gc-sections --strip-all"
         #export GOFLAGS="-a"
-        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -WL,-z,now -static-libgcc -Wl,--strip-all -Wl,--gc-sections"
+        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -Wl,-z,now -static-libgcc -Wl,--strip-all -Wl,--gc-sections"
         #export CGO_LDFLAGS="-fuse-ld=lld -Wl,-z,separate-loadable-segments -Wl,-z,common-page-size=0x4000 -Wl,-z,max-page-size=0x4000 -Wl,--strip-all -Wl,--gc-sections"
 
         gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -buildid='' -linkmode external -extldflags=\"$CGO_LDFLAGS\"" ./
