--- a/.github/workflows/Modlibpiev6.yml
+++ b/.github/workflows/Modlibpiev6.yml
@@ -203,12 +203,17 @@ jobs:
        
         export CC="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android21-clang"
         export CXX="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android21-clang++"
-        export CGO_CFLAGS="-O3 -flto -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector -fmerge-all-constants -fomit-frame-pointer -funroll-loops"
-        export CGO_CXXFLAGS="-O3 -flto -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector -fmerge-all-constants -fomit-frame-pointer -funroll-loops"
+        export CGO_CFLAGS="-O3 -fvisibility=hidden -ffunction-sections -fdata-sections -fomit-frame-pointer"
+        export CGO_CXXFLAGS="-O3 -fvisibility=hidden -ffunction-sections -fdata-sections -fomit-frame-pointer"
 
-        export CGO_LDFLAGS="-Wl,-z,max-page-size=0x4000 -Wl,-z,common-page-size=0x4000 -Wl,-z,separate-loadable-segments -Wl,-z,now -static-libgcc -Wl,--strip-all -Wl,--gc-sections -flto -Wl,-O1 -Wl,--icf=safe"
-
-        gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -linkmode external" ./
+        export CGO_LDFLAGS="-Wl,-z,max-page-size=16384 -Wl,-z,common-page-size=16384 -Wl,-z,separate-loadable-segments -Wl,-z,now -Wl,--gc-sections -Wl,--strip-all"
+        echo "=== BUILD ENV ==="
+        echo "GOOS=$GOOS"
+        echo "GOARCH=$GOARCH"
+        echo "CC=$CC"
+        go env GOOS GOARCH CC CGO_CFLAGS
+        echo "=================="
+        gomobile bind -v -x -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags="-s -w -linkmode=external" ./
   
         
         #export CGO_LDFLAGS="-fuse-ld=lld -Wl,-z,separate-loadable-segments -Wl,-z,common-page-size=0x4000 -Wl,-z,max-page-size=0x4000 -Wl,--strip-all -Wl,--gc-sections"
