--- a/.github/workflows/Modlibpiev6.yml
+++ b/.github/workflows/Modlibpiev6.yml
@@ -167,7 +167,8 @@ jobs:
         
         
         
-        
+        wget https://raw.githubusercontent.com/t-e-s-tweb/v-rules/refs/heads/main/xmuxpatch.sh
+        bash xmuxpatch.sh
         cd ${{ github.workspace }}/
 
         echo "Updating go.mod to use local xray-core..."
