--- a/.github/workflows/Modboringssl.yml
+++ b/.github/workflows/Modboringssl.yml
@@ -28,14 +28,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        abi: [arm64-v8a, armeabi-v7a, x86_64]
+        abi: [arm64-v8a, x86_64]
         include:
           - abi: arm64-v8a
             toolchain: aarch64-linux-android24
             cmake_arch: arm64-v8a
-          - abi: armeabi-v7a
-            toolchain: armv7a-linux-androideabi24
-            cmake_arch: armeabi-v7a
           - abi: x86_64
             toolchain: x86_64-linux-android24
             cmake_arch: x86_64
@@ -59,22 +56,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y ninja-build cmake
-
-      - name: Download xray-patches
-        run: |
-          echo "📥 Downloading xray-patches for BoringSSL integration..."
-          mkdir -p xray-patches
-          
-          # Use GitHub API to list files in the directory
-          PATCHES=$(curl -s "https://api.github.com/repos/halibiram/SimpleXray/contents/xray-patches" | grep -o '"name": "[^"]*\.patch"' | cut -d'"' -f4)
-          
-          for patch in $PATCHES; do
-            echo "Downloading: $patch"
-            curl -sL "https://raw.githubusercontent.com/halibiram/SimpleXray/main/xray-patches/$patch" -o "xray-patches/$patch"
-          done
-          
-          echo "📂 Available patches:"
-          ls -la xray-patches/
 
       - name: Build BoringSSL
         run: |
@@ -183,7 +164,7 @@ jobs:
         ls -la boringssl-artifacts/
         
         # Organize artifacts by ABI
-        for abi in arm64-v8a armeabi-v7a x86_64; do
+        for abi in arm64-v8a x86_64; do
           if [ -d "boringssl-artifacts/boringssl-$abi" ]; then
             echo "✅ Found artifacts for $abi"
             ls -la boringssl-artifacts/boringssl-$abi/
@@ -191,6 +172,22 @@ jobs:
             echo "⚠️  No artifacts found for $abi"
           fi
         done
+
+    - name: Download xray-patches
+      run: |
+        echo "📥 Downloading xray-patches for BoringSSL integration..."
+        mkdir -p xray-patches
+        
+        # Use GitHub API to list files in the directory
+        PATCHES=$(curl -s "https://api.github.com/repos/halibiram/SimpleXray/contents/xray-patches" | grep -o '"name": "[^"]*\.patch"' | cut -d'"' -f4)
+        
+        for patch in $PATCHES; do
+          echo "Downloading: $patch"
+          curl -sL "https://raw.githubusercontent.com/halibiram/SimpleXray/main/xray-patches/$patch" -o "xray-patches/$patch"
+        done
+        
+        echo "📂 Available patches:"
+        ls -la xray-patches/
 
     - name: Build
       run: |
@@ -272,7 +269,7 @@ jobs:
           done
         fi          
                 
-        # Apply BoringSSL patches
+        # Apply BoringSSL patches (downloaded in previous step)
         echo "📝 Applying BoringSSL patches to Xray-core..."
         if [ -d "$GITHUB_WORKSPACE/xray-patches" ]; then
           for patch in $GITHUB_WORKSPACE/xray-patches/*.patch; do
