--- a/.github/workflows/Modboringssl.yml
+++ b/.github/workflows/Modboringssl.yml
@@ -708,6 +708,7 @@ jobs:
         echo "=================="
         
         gomobile bind -v -x -androidapi 24 -trimpath \
+          - target=android/arm64 \
           -gcflags="all=-l=4" \
           -ldflags="-s -w -linkmode=external" \
           ./
