--- a/.github/workflows/Modboringssl.yml
+++ b/.github/workflows/Modboringssl.yml
@@ -709,6 +709,7 @@ jobs:
         export GOOS=android 
         export GOARCH=arm64
         gomobile bind -v -x -androidapi 24 -trimpath \
+          -target=android/arm64 \
           -gcflags="all=-l=4" \
           -ldflags="-s -w -linkmode=external" \
           ./
