--- a/.github/workflows/Modboringssl.yml
+++ b/.github/workflows/Modboringssl.yml
@@ -150,6 +150,10 @@ jobs:
         fi
         
         cd "$BORINGSSL_DIR"
+        rm -rf "build_$ABI"
+        
+        
+
         
         TOOLCHAIN_DIR="$NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64"
         export PATH=$TOOLCHAIN_DIR/bin:$PATH
@@ -161,27 +165,33 @@ jobs:
         export ANDROID_NDK_HOME=$NDK_HOME
         export ANDROID_NDK_ROOT=$NDK_HOME
         
+
         BUILD_DIR="build_$ABI"
+        
         mkdir -p "$BUILD_DIR"
         cd "$BUILD_DIR"
         
         echo "📦 Current directory: $(pwd)"
-        
+        export ANDROID_PLATFORM=android-24
+
         cmake .. \
             -DCMAKE_SYSTEM_NAME=Android \
             -DCMAKE_SYSTEM_VERSION=24 \
-            -DCMAKE_ANDROID_ARCH_ABI=$CMAKE_ARCH \
+            -DANDROID_PLATFORM=android-24 \
+            -DANDROID_ABI=arm64-v8a \
+            -DCMAKE_ANDROID_ARCH_ABI=arm64-v8a \
             -DCMAKE_ANDROID_NDK=$NDK_HOME \
             -DCMAKE_TOOLCHAIN_FILE=$NDK_HOME/build/cmake/android.toolchain.cmake \
             -DCMAKE_BUILD_TYPE=Release \
             -DOPENSSL_SMALL=1 \
             -DOPENSSL_NO_DEPRECATED=1 \
-            -DOPENSSL_NO_ASM=0 \
+            -DOPENSSL_NO_ASM=1 \
             -DBUILD_SHARED_LIBS=OFF \
             -DBENCHMARK_ENABLE_TESTING=OFF \
             -DBENCHMARK_ENABLE_INSTALL=OFF \
             -DBENCHMARK_ENABLE_GTEST_TESTS=OFF \
-            -GNinja 2>&1 | tee cmake.log
+            -GNinja
+
         
         CMAKE_EXIT=${PIPESTATUS[0]}
         if [ $CMAKE_EXIT -ne 0 ]; then
